--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="logo.png" type="image/x-icon"><title>SCEC TECHNOLOGIES</title><link rel="stylesheet" href="style.css"></head><body><div class="root"><header><nav><div class="logo">SCEC TECHNOLOGIES<div id="burger-menu"><span></span></div></div><ul id="menu"><a href=""><li>Home</li></a><a href="#abt-us"><li>About Us</li></a><a href="#services"><li>Services</li></a><a href=""><li>Reviews</li></a><a href="#contact"><button class="hide">Let's Talk</button></a></ul><a href="#contact"><button class="big">Let's Talk</button></a></nav><div class="hero"><div class="info1"><div class="info"><p>Best in Kampala<span class="orange">#1</span></p><h1>SCEC<br>TECHNOLOGIES</h1><p>Empower your dreams with our expertise in modern technologies, turning ideas into tech-driven realities for your digital success.</p><a href="#work"><button>Explore</button></a></div><div class="img"><img src="img/hero1-min.jpeg" alt=""></div></div></div></header><main><section class="detail" id="abt-us"><div class="about"><h2>Leading In Website<br>Designing</h2><p>We craft online presences from branding to web design and digital marketing.</p></div><div class="detail"><div class="d1"><h4>5+ Years</h4><p>Over 5 years of expert digital solutions.</p></div><div class="d1"><h4>5.0</h4><p>Excellence with a perfect 5.0 rating.</p></div><div class="d1"><h4>20+ Clients</h4><p>Trusted by 20+ satisfied businesses.</p></div></div></section><section class="video"><video style="width:100%;height:400px;background-color:#474747" controls src="img/web.MP4"></video></section><section class="services" id="services"><div class="about"><h3>Our Services</h3><p>Empower your brand online with our comprehensive digital solutions, uniting strategic expertise and creative innovation for a standout presence in the digital landscape.</p></div><div class="card active"><img src="icon/Windows 10 Personalization.png" alt="Web Design Icon"><h4>Web Design</h4><p>Create a lasting impression with our captivating web designs, tailored to your unique vision and brand identity.</p></div><div class="card"><img src="icon/Commercial.png" alt="Digital Marketing Icon"><h4>Digital Marketing</h4><p>Drive measurable success with strategic online campaigns and targeted SEO.</p></div><div class="card"><img src="icon/Logo.png" alt="Branding Icon"><h4>Branding</h4><p>Build a lasting impression with distinctive brand identities and strategies.</p></div><div class="card"><img src="icon/Design.png" alt="UI/UX Design Icon"><h4>UI/UX Design</h4><p>Ensure a seamless user experience with visually appealing interfaces.</p></div><div class="card" style="opacity:0;user-select:none"></div></section><section class="work" id="work"><h2>Our Recent Work</h2><hr><div class="w-list"><div class="w-card"><img src="img/highlands.png" alt=""><div class="info"><h3>Web Design & Development</h3><b>Highland General Enterprises</b><p>A Contruction company aimed at building mordern infrasture in all parts of the country delivering trust and professionalism.</p><a href="">View project</a></div></div><hr width="100%"><div class="w-card"><img src="img/ngo website.png" alt=""><div class="info"><h3>Web Design & Development</h3><b>Trophy Youth</b><p>An NGO dedicated to improving the lives of youths around Uganda and Africa in general.</p><a href="">View Project.</a></div></div></div></section></main><footer><nav><div class="logo"><h2>SCEC<br>TECHNOLOGIES</h2><p>Let Us Fous On Tech. You Focus On What Truly Matters</p></div><div class="list"><a href="">Home</a><a href="">About Us</a><a href="">Services</a><a href="">Reviews</a></div><div class="contact-info" id="contact"><h4>Contact Us</h4><p>Email: tanish@scec.tech</p><p>Phone: +256 752 588 683</p><p>Address: Bugiri, Kawuku, Uganda</p></div></nav><hr style="width:100%;margin-bottom:20px;border:.5px solid rgba(255,255,255,.5)"><div class="pp"><p>© 2022 SCEC.tech, All rights reserved.</p><ul><li><a href="">Privacy policy</a></li><li><a href="">Terms of service</a></li></ul></div></footer></div><script src="code.jquery.com_jquery-3.6.0.js"></script><script>$(document).ready(function(){$("#burger-menu").click(function(){$(this).toggleClass("close"),$("#menu").slideToggle()})}),document.addEventListener("contextmenu",function(e){e.preventDefault()})</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+    <title>SCEC TECHNOLOGIES</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="root">
+      <header>
+        <nav>
+          <div class="logo">
+            SCEC TECHNOLOGIES
+            <div id="burger-menu"><span></span></div>
+          </div>
+          <ul id="menu">
+            <a href=""><li>Home</li></a
+            ><a href="#abt-us"><li>About Us</li></a
+            ><a href="#services"><li>Services</li></a
+            ><a href=""><li>Reviews</li></a
+            ><a href="#contact"><button class="hide">Let's Talk</button></a>
+          </ul>
+          <a href="#contact"><button class="big">Let's Talk</button></a>
+        </nav>
+        <div class="hero">
+          <div class="info1">
+            <div class="info">
+              <p>Best in Kampala<span class="orange">#1</span></p>
+              <h1>SCEC<br />TECHNOLOGIES</h1>
+              <p>
+                Empower your dreams with our expertise in modern technologies,
+                turning ideas into tech-driven realities for your digital
+                success.
+              </p>
+              <a href="#work"><button>Explore</button></a>
+            </div>
+            <div class="img"><img src="img/hero1-min.jpeg" alt="" /></div>
+          </div>
+        </div>
+      </header>
+      <main>
+        <section class="detail" id="abt-us">
+          <div class="about">
+            <h2>Leading In Website<br />Designing</h2>
+            <p>
+              We craft online presences from branding to web design and digital
+              marketing.
+            </p>
+          </div>
+          <div class="detail">
+            <div class="d1">
+              <h4>5+ Years</h4>
+              <p>Over 5 years of expert digital solutions.</p>
+            </div>
+            <div class="d1">
+              <h4>5.0</h4>
+              <p>Excellence with a perfect 5.0 rating.</p>
+            </div>
+            <div class="d1">
+              <h4>20+ Clients</h4>
+              <p>Trusted by 20+ satisfied businesses.</p>
+            </div>
+          </div>
+        </section>
+        <section class="video">
+          <video
+            style="width: 100%; height: 400px; background-color: #474747"
+            controls
+            src="img/web.MP4"
+          ></video>
+        </section>
+        <section class="services" id="services">
+          <div class="about">
+            <h3>Our Services</h3>
+            <p>
+              Empower your brand online with our comprehensive digital
+              solutions, uniting strategic expertise and creative innovation for
+              a standout presence in the digital landscape.
+            </p>
+          </div>
+          <div class="card active">
+            <img
+              src="icon/Windows 10 Personalization.png"
+              alt="Web Design Icon"
+            />
+            <h4>Web Design</h4>
+            <p>
+              Create a lasting impression with our captivating web designs,
+              tailored to your unique vision and brand identity.
+            </p>
+          </div>
+          <div class="card">
+            <img src="icon/Commercial.png" alt="Digital Marketing Icon" />
+            <h4>Digital Marketing</h4>
+            <p>
+              Drive measurable success with strategic online campaigns and
+              targeted SEO.
+            </p>
+          </div>
+          <div class="card">
+            <img src="icon/Logo.png" alt="Branding Icon" />
+            <h4>Branding</h4>
+            <p>
+              Build a lasting impression with distinctive brand identities and
+              strategies.
+            </p>
+          </div>
+          <div class="card">
+            <img src="icon/Design.png" alt="UI/UX Design Icon" />
+            <h4>UI/UX Design</h4>
+            <p>
+              Ensure a seamless user experience with visually appealing
+              interfaces.
+            </p>
+          </div>
+          <div class="card" style="opacity: 0; user-select: none"></div>
+        </section>
+        <section class="work" id="work">
+          <h2>Our Recent Work</h2>
+          <hr />
+          <div class="w-list">
+            <div class="w-card">
+              <img src="img/highlands.png" alt="" />
+              <div class="info">
+                <h3>Web Design & Development</h3>
+                <b>Highland General Enterprises</b>
+                <p>
+                  A Contruction company aimed at building mordern infrasture in
+                  all parts of the country delivering trust and professionalism.
+                </p>
+                <a href="">View project</a>
+              </div>
+            </div>
+            <hr width="100%" />
+            <div class="w-card">
+              <img src="img/ngo website.png" alt="" />
+              <div class="info">
+                <h3>Web Design & Development</h3>
+                <b>Trophy Youth</b>
+                <p>
+                  An NGO dedicated to improving the lives of youths around
+                  Uganda and Africa in general.
+                </p>
+                <a href="">View Project.</a>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <nav>
+          <div class="logo">
+            <h2>SCEC<br />TECHNOLOGIES</h2>
+            <p>Let Us Fous On Tech. You Focus On What Truly Matters</p>
+          </div>
+          <div class="list">
+            <a href="">Home</a><a href="">About Us</a><a href="">Services</a
+            ><a href="">Reviews</a>
+          </div>
+          <div class="contact-info" id="contact">
+            <h4>Contact Us</h4>
+            <p>Email: tanish@scec.tech</p>
+            <p>Phone: +256 752 588 683</p>
+            <p>Address: Bugiri, Kawuku, Uganda</p>
+          </div>
+        </nav>
+        <hr
+          style="
+            width: 100%;
+            margin-bottom: 20px;
+            border: 0.5px solid rgba(255, 255, 255, 0.5);
+          "
+        />
+        <div class="pp">
+          <p>© 2022 SCEC.tech, All rights reserved.</p>
+          <ul>
+            <li><a href="">Privacy policy</a></li>
+            <li><a href="">Terms of service</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+    <script src="code.jquery.com_jquery-3.6.0.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#burger-menu").click(function () {
+          $(this).toggleClass("close"), $("#menu").slideToggle();
+        });
+      }),
+        document.addEventListener("contextmenu", function (e) {
+          e.preventDefault();
+        });
+    </script>
+  </body>
+</html>
