--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>SCEC TECHNOLOGIES - Empower Your Digital Success</title>
+  <meta name="description" content="Empower your dreams with our expertise in modern technologies, turning ideas into tech-driven realities for your digital success. Leading in website designing with over 5 years of experience and 20+ satisfied clients. Contact us today!" />
+  <meta name="keywords" content="SCEC TECHNOLOGIES, website designing, digital marketing, branding, UI/UX design, technology solutions" />
+  <meta name="author" content="SCEC TECHNOLOGIES" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://scec.tech" />
+  <meta property="og:title" content="SCEC TECHNOLOGIES - Empower Your Digital Success" />
+  <meta property="og:description" content="Empower your dreams with our expertise in modern technologies, turning ideas into tech-driven realities for your digital success. Leading in website designing with over 5 years of experience and 20+ satisfied clients. Contact us today!" />
+  <meta property="og:image" content="https://scec.tech/logo.png" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://scec.tech" />
+  <meta property="twitter:title" content="SCEC TECHNOLOGIES - Empower Your Digital Success" />
+  <meta property="twitter:description" content="Empower your dreams with our expertise in modern technologies, turning ideas into tech-driven realities for your digital success. Leading in website designing with over 5 years of experience and 20+ satisfied clients. Contact us today!" />
+  <meta property="twitter:image" content="https://scec.tech/logo.png" />
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
-    <title>SCEC TECHNOLOGIES</title>
     <link rel="stylesheet" href="style.css" />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "SCEC TECHNOLOGIES",
+        "url": "https://scec.tech",
+        "logo": "https://scec.tech/logo.png",
+        "description": "Empower your dreams with our expertise in modern technologies, turning ideas into tech-driven realities for your digital success.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Bugiri, Kawuku",
+          "addressLocality": "Uganda",
+          "postalCode": "12345",
+          "addressCountry": "UG"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+256 752 588 683",
+          "contactType": "Customer Support"
+        }
+      }
+      </script>
   </head>
   <body>
     <div class="root">
